fix index.html template

--- a/cmd/ripple/templates/frontend/templates/home/index.html
+++ b/cmd/ripple/templates/frontend/templates/home/index.html
@@ -10,10 +10,10 @@
 <h3>Routes</h3>
 <ul>
     <li>
-        <a href="http://localhost:8090/html" target="_blank">Html template Page</a>
+        <a href="/html" target="_blank">Html template Page</a>
     </li>
     <li>
-        <a href="http://localhost:8090/string" target="_blank">String Page</a>
+        <a href="/string" target="_blank">String Page</a>
     </li>
 </ul>
 </body>
